<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context="edu.noctrl.csc510.csc510_p2.ForecastFragment">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/area_description"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/area_description"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/day_of_week"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/day_of_week" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/forcast_image"
            android:layout_width="fill_parent"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:contentDescription="@string/forecast_image_desc"
            android:src="@drawable/default_image" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/precipitation"
            android:id="@+id/precipitation"
            android:layout_gravity="right"
            android:gravity="right"
            android:background="#D9D9D9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_vertical|center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/forecast_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/forecast_high"
                    android:textColor="#F04D42" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_vertical|center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/forecast_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/forecast_low"
                    android:textColor="#2BB0E6" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/am_container"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#BDD7EE"
                    android:clickable="true"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/forecast_am_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="#ffffffff"
                            android:gravity="center"
                            android:text="@string/forecast_am_title" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/forecast_am"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/forecast_am" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/pm_container"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#D9D9D9"
                    android:clickable="true"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="35dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/forecast_pm_title"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="#ffffffff"
                            android:gravity="center"
                            android:text="@string/forecast_pm_title" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/forecast_pm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/forecast_pm" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/forecast"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#BDD7EE"
                android:text="@string/forecast" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
